docs(project): correct round-four evidence timestamp